Separates manifestVersion from Version. Finishes re-enabling test for acctExport

--- a/src/dev_tools/makeClass/templates/version.go.tmpl
+++ b/src/dev_tools/makeClass/templates/version.go.tmpl
@@ -5,6 +5,7 @@
  * This file was auto generated with makeClass --gocmds. DO NOT EDIT.
  */
 
-package cmd
+package version
 
-const versionText = "[{VERSION}]"
+const LibraryVersion = "[{VERSION}]"
+const ManifestVersion = "[{MANIFEST_VERSION}]"
