--- a/src/dev_tools/makeClass/templates/version.go.tmpl
+++ b/src/dev_tools/makeClass/templates/version.go.tmpl
@@ -5,6 +5,7 @@
  * This file was auto generated with makeClass --gocmds. DO NOT EDIT.
  */
 
-package cmd
+package version
 
-const helpText = `[{HELP_TEXT}]`
+const LibraryVersion = "[{VERSION}]"
+const ManifestVersion = "[{MANIFEST_VERSION}]"
