--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -28,8 +28,8 @@ type [{PROPER}]Options struct {
 
 var [{ROUTE}]CmdLineOptions [{PROPER}]Options
 
-// TestLog is used only during testing to export the options for this test case.
-func (opts *[{PROPER}]Options) TestLog() {
+// testLog is used only during testing to export the options for this test case.
+func (opts *[{PROPER}]Options) testLog() {
 [{TEST_LOGS}]	opts.Globals.TestLog()
 }
 
@@ -39,9 +39,7 @@ func (opts *[{PROPER}]Options) String() string {
 	return string(b)
 }
 
-// getEnvStr allows for adding custom environment strings when calling out to the command line (useful for debugging).
-[{GETENVSTR}]// toCmdLine converts the options object to a command line for calling out to the system.
-[{TOCMDLINE}]// [{LOWER}]FinishParseApi finishes the parsing for server invocations. Returns a new [{PROPER}]Options.
+[{GETENVSTR}][{TOCMDLINE}]// [{LOWER}]FinishParseApi finishes the parsing for server invocations. Returns a new [{PROPER}]Options.
 func [{LOWER}]FinishParseApi(w http.ResponseWriter, r *http.Request) *[{PROPER}]Options {
 	opts := &[{PROPER}]Options{}
 [{DEFAULTS_API}]	for key, value := range r.URL.Query() {
