--- a/src/dev_tools/makeClass/templates/blank_output.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_output.go.tmpl
@@ -13,7 +13,7 @@ package [{API_ROUTE}]Pkg
 
 // Run[{PROPER}] handles the [{ROUTE}] command for the command line. Returns error only as per cobra.
 func Run[{PROPER}](cmd *cobra.Command, args []string) (err error) {
-	opts := [{PROPER}]FinishParse(args)
+	opts := [{LOWER}]FinishParse(args)
 	// EXISTING_CODE
 	// EXISTING_CODE
 	err, _ = opts.[{PROPER}]Internal()
@@ -22,7 +22,7 @@ func Run[{PROPER}](cmd *cobra.Command, args []string) (err error) {
 
 // Serve[{PROPER}] handles the [{ROUTE}] command for the API. Returns error and a bool if handled
 func Serve[{PROPER}](w http.ResponseWriter, r *http.Request) (err error, handled bool) {
-	opts := [{PROPER}]FinishParseApi(w, r)
+	opts := [{LOWER}]FinishParseApi(w, r)
 	// EXISTING_CODE
 	// EXISTING_CODE
 	return opts.[{PROPER}]Internal()
@@ -30,7 +30,7 @@ func Serve[{PROPER}](w http.ResponseWriter, r *http.Request) (err error, handled
 
 // [{PROPER}]Internal handles the internal workings of the [{ROUTE}] command.  Returns error and a bool if handled
 func (opts *[{PROPER}]Options) [{PROPER}]Internal() (err error, handled bool) {
-	err = opts.Validate[{PROPER}]()
+	err = opts.validate[{PROPER}]()
 	if err != nil {
 		return err, true
 	}
