--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -8,29 +8,39 @@
 package [{ROUTE}]Pkg
 
 import (
+	"encoding/json"
 	"fmt"
 	"net/http"
 	"strings"
 
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/internal/globals"
-	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/blockRange"
+	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/identifiers"
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/logger"
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/rpcClient/ens"
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/utils"
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/validate"
 )
 
+// [{PROPER}]Options provides all command options for the chifra [{LOWER}] command.
 type [{PROPER}]Options struct {
 [{OPT_FIELDS}]
 }
 
 var [{ROUTE}]CmdLineOptions [{PROPER}]Options
 
-func (opts *[{PROPER}]Options) TestLog() {
+// testLog is used only during testing to export the options for this test case.
+func (opts *[{PROPER}]Options) testLog() {
 [{TEST_LOGS}]	opts.Globals.TestLog()
 }
 
-[{GETENVSTR}][{TOCMDLINE}]func [{PROPER}]FinishParseApi(w http.ResponseWriter, r *http.Request) *[{PROPER}]Options {
+// String implements the Stringer interface
+func (opts *[{PROPER}]Options) String() string {
+	b, _ := json.MarshalIndent(opts, "", "\t")
+	return string(b)
+}
+
+[{GETENVSTR}][{TOCMDLINE}]// [{LOWER}]FinishParseApi finishes the parsing for server invocations. Returns a new [{PROPER}]Options.
+func [{LOWER}]FinishParseApi(w http.ResponseWriter, r *http.Request) *[{PROPER}]Options {
 	opts := &[{PROPER}]Options{}
 [{DEFAULTS_API}]	for key, value := range r.URL.Query() {
 		switch key {
@@ -48,7 +58,8 @@ func (opts *[{PROPER}]Options) TestLog() {
 	return opts
 }
 
-func [{PROPER}]FinishParse(args []string) *[{PROPER}]Options {
+// [{LOWER}]FinishParse finishes the parsing for command line invocations. Returns a new [{PROPER}]Options.
+func [{LOWER}]FinishParse(args []string) *[{PROPER}]Options {
 	opts := GetOptions()
 	opts.Globals.FinishParse(args)
 	defFmt := "txt"
