Adds tornado cash addresses to names, works a bit on defaults with configs

--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -62,10 +62,10 @@ func [{LOWER}]FinishParseApi(w http.ResponseWriter, r *http.Request) *[{PROPER}]
 func [{LOWER}]FinishParse(args []string) *[{PROPER}]Options {
 	opts := GetOptions()
 	opts.Globals.FinishParse(args)
-[{CONFIG_OVERRIDE}]	defFmt := "txt"
+	defFmt := "txt"
 	// EXISTING_CODE
 	// EXISTING_CODE
-	if len(opts.Globals.Format) == 0 || opts.Globals.Format == "none" {
+[{CONFIG_OVERRIDE}]	if len(opts.Globals.Format) == 0 || opts.Globals.Format == "none" {
 		opts.Globals.Format = defFmt
 	}
 	return opts
