--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -35,7 +35,7 @@ func (opts *[{PROPER}]Options) testLog() {
 
 // String implements the Stringer interface
 func (opts *[{PROPER}]Options) String() string {
-	b, _ := json.MarshalIndent(opts, "", "\t")
+	b, _ := json.MarshalIndent(opts, "", "  ")
 	return string(b)
 }
 
