--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -26,7 +26,7 @@ type [{PROPER}]Options struct {
 [{OPT_FIELDS}]
 }
 
-var [{ROUTE}]CmdLineOptions [{PROPER}]Options
+var default[{PROPER}]Options = [{PROPER}]Options{[{GODEFS}]}
 
 // testLog is used only during testing to export the options for this test case.
 func (opts *[{PROPER}]Options) testLog() {
@@ -41,7 +41,8 @@ func (opts *[{PROPER}]Options) String() string {
 
 [{GETENVSTR}][{TOCMDLINE}]// [{LOWER}]FinishParseApi finishes the parsing for server invocations. Returns a new [{PROPER}]Options.
 func [{LOWER}]FinishParseApi(w http.ResponseWriter, r *http.Request) *[{PROPER}]Options {
-	opts := &[{PROPER}]Options{}
+	copy := default[{PROPER}]Options
+	opts := &copy
 [{DEFAULTS_API}]	for key, value := range r.URL.Query() {
 		switch key {
 [{REQUEST_OPTS}]		default:
@@ -74,5 +75,5 @@ func [{LOWER}]FinishParse(args []string) *[{PROPER}]Options {
 func GetOptions() *[{PROPER}]Options {
 	// EXISTING_CODE
 	// EXISTING_CODE
-	return &[{ROUTE}]CmdLineOptions
+	return &default[{PROPER}]Options
 }
