--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -79,7 +79,7 @@ func GetOptions() *[{PROPER}]Options {
 }
 
 func ResetOptions() {
-	default[{PROPER}]Options = ReceiptsOptions{}
+	default[{PROPER}]Options = [{PROPER}]Options{}
 	// Fill newly created object with the defaults
 	default[{PROPER}]Options.Globals.TestMode = globals.IsTestMode()
 	globals.SetDefaults(&default[{PROPER}]Options.Globals)
