--- a/src/dev_tools/makeClass/templates/blank_output.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_output.go.tmpl
@@ -17,6 +17,9 @@ func Run[{PROPER}](cmd *cobra.Command, args []string) (err error) {
 	// EXISTING_CODE
 	// EXISTING_CODE
 	err, _ = opts.[{PROPER}]Internal()
+	outputHelpers.CloseJsonWriterIfNeeded(func() *globals.GlobalOptions {
+		return &opts.Globals
+	})
 	return
 }
 
@@ -25,7 +28,11 @@ func Serve[{PROPER}](w http.ResponseWriter, r *http.Request) (err error, handled
 	opts := [{LOWER}]FinishParseApi(w, r)
 	// EXISTING_CODE
 	// EXISTING_CODE
-	return opts.[{PROPER}]Internal()
+	err, handled = opts.[{PROPER}]Internal()
+	if opts.Globals.Format == "json" && err == nil {
+		opts.Globals.Writer.(*output.JsonWriter).Close()
+	}
+	return
 }
 
 // [{PROPER}]Internal handles the internal workings of the [{ROUTE}] command.  Returns error and a bool if handled
