--- a/src/dev_tools/makeClass/templates/blank.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank.go.tmpl
@@ -16,7 +16,7 @@ var [{ROUTE}]Cmd = &cobra.Command{
 	Short:   short[{PROPER}],
 	Long:    long[{PROPER}],
 	Version: versionText,
-	PreRun: outputHelpers.PreRunWithJsonWriter(func() *globals.GlobalOptions {
+	PreRun: outputHelpers.PreRunWithJsonWriter("[{ROUTE}]", func() *globals.GlobalOptions {
 		return &[{ROUTE}]Pkg.GetOptions().Globals
 	}),
 	RunE:    file.RunWithFileSupport("[{ROUTE}]", [{ROUTE}]Pkg.Run[{PROPER}], [{ROUTE}]Pkg.ResetOptions),
