--- a/src/dev_tools/makeClass/templates/blank_output.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_output.go.tmpl
@@ -45,5 +45,14 @@ func (opts *[{PROPER}]Options) [{PROPER}]Internal() (err error, handled bool) {
 	return
 }
 
+// Get[{PROPER}]Options returns the options for this tool so other tools may use it.
+func Get[{PROPER}]Options(args []string, g *globals.GlobalOptions) *[{PROPER}]Options {
+	ret := [{ROUTE}]FinishParse(args)
+	if g != nil {
+		ret.Globals = *g
+	}
+	return ret
+}
+
 // EXISTING_CODE
 // EXISTING_CODE
