Adds serve alias to daemon and status alias to config

--- a/src/dev_tools/makeClass/templates/blank.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank.go.tmpl
@@ -23,7 +23,7 @@ var [{ROUTE}]Cmd = &cobra.Command{
 	PostRun: outputHelpers.PostRunWithJsonWriter(func() *globals.GlobalOptions {
 		return &[{ROUTE}]Pkg.GetOptions().Globals
 	}),
-}
+[{ALIASES}]}
 
 const usage[{PROPER}] = `[{USE}]`
 
