Add an EXISTING_CODE block in options.go type definitions

--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -23,7 +23,8 @@ import (
 
 // [{PROPER}]Options provides all command options for the chifra [{LOWER}] command.
 type [{PROPER}]Options struct {
-[{OPT_FIELDS}]
+[{OPT_FIELDS}]	// EXISTING_CODE
+	// EXISTING_CODE
 }
 
 var default[{PROPER}]Options = [{PROPER}]Options{[{GODEFS}]}
