--- a/src/dev_tools/makeClass/templates/blank_type.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_type.go.tmpl
@@ -44,5 +44,17 @@ func (s *Simple[{CLASS_NAME}]) Model(showHidden bool, format string, extraOption
 	}
 }
 
+func (s *Simple[{CLASS_NAME}]) Write(p []byte) (n int, err error) {
+	// JIMMY_JAM
+	// JIMMY_JAM
+	return 0, nil
+}
+
+func (s *Simple[{CLASS_NAME}]) Read(p []byte) (n int, err error) {
+	// JIMMY_JAM
+	// JIMMY_JAM
+	return 0, nil
+}
+
 // EXISTING_CODE
 // EXISTING_CODE
