Preparing all types for auto-generation

--- a/src/dev_tools/makeClass/templates/blank_type.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_type.go.tmpl
@@ -45,14 +45,14 @@ func (s *Simple[{CLASS_NAME}]) Model(showHidden bool, format string, extraOption
 }
 
 func (s *Simple[{CLASS_NAME}]) Write(p []byte) (n int, err error) {
-	// JIMMY_JAM
-	// JIMMY_JAM
+	// EXISTING_CODE
+	// EXISTING_CODE
 	return 0, nil
 }
 
 func (s *Simple[{CLASS_NAME}]) Read(p []byte) (n int, err error) {
-	// JIMMY_JAM
-	// JIMMY_JAM
+	// EXISTING_CODE
+	// EXISTING_CODE
 	return 0, nil
 }
 
