--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -86,3 +86,6 @@ func ResetOptions() {
 	globals.SetDefaults(&default[{PROPER}]Options.Globals)
 	default[{PROPER}]Options.Globals.Writer = w
 }
+
+// EXISTING_CODE
+// EXISTING_CODE
