--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -14,7 +14,8 @@ import (
 	"strings"
 
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/internal/globals"
-[{BASEPKG}][{CACHEPKG}][{CONFIGPKG}][{INDEXPKG}]	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/identifiers"
+[{BASEPKG}][{CACHEPKG}]	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/caps"
+[{CONFIGPKG}][{INDEXPKG}]	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/identifiers"
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/logger"
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/rpcClient/ens"
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/utils"
@@ -47,7 +48,7 @@ func [{LOWER}]FinishParseApi(w http.ResponseWriter, r *http.Request) *[{PROPER}]
 [{DEFAULTS_API}]	for key, value := range r.URL.Query() {
 		switch key {
 [{REQUEST_OPTS}]		default:
-			if !globals.IsGlobalOption(key) {
+			if !globals.IsGlobalOption(copy.Globals.Caps, key) {
 				opts.BadFlag = validate.Usage("Invalid key ({0}) in {1} route.", key, "[{ROUTE}]")
 				return opts
 			}
@@ -85,6 +86,9 @@ func ResetOptions() {
 	default[{PROPER}]Options = [{PROPER}]Options{}
 	globals.SetDefaults(&default[{PROPER}]Options.Globals)
 	default[{PROPER}]Options.Globals.Writer = w
+	default[{PROPER}]Options.Globals.Caps = caps.None // Additional global caps for use with --file option
+	// EXISTING_CODE
+	// EXISTING_CODE
 }
 
 // EXISTING_CODE
