--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -48,7 +48,7 @@ func [{LOWER}]FinishParseApi(w http.ResponseWriter, r *http.Request) *[{PROPER}]
 [{DEFAULTS_API}]	for key, value := range r.URL.Query() {
 		switch key {
 [{REQUEST_OPTS}]		default:
-			if !globals.IsGlobalOption(copy.Globals.Caps, key) {
+			if !copy.Globals.Caps.HasKey(key) {
 				opts.BadFlag = validate.Usage("Invalid key ({0}) in {1} route.", key, "[{ROUTE}]")
 				return opts
 			}
@@ -86,7 +86,7 @@ func ResetOptions() {
 	default[{PROPER}]Options = [{PROPER}]Options{}
 	globals.SetDefaults(&default[{PROPER}]Options.Globals)
 	default[{PROPER}]Options.Globals.Writer = w
-	default[{PROPER}]Options.Globals.Caps = caps.None // Additional global caps for use with --file option
+	default[{PROPER}]Options.Globals.Caps = caps.Default // Additional global caps for use with --file option
 	// EXISTING_CODE
 	// EXISTING_CODE
 }
