Moves cacheNew package to cache

--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -14,13 +14,13 @@ import (
 	"strings"
 
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/internal/globals"
-[{BASEPKG}][{CACHEPKG}]	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/caps"
+[{BASEPKG}]	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/caps"
 [{CONFIGPKG}][{INDEXPKG}]	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/identifiers"
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/logger"
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/rpcClient"
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/utils"
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/validate"
-)
+[{WALKPKG}])
 
 // [{PROPER}]Options provides all command options for the chifra [{LOWER}] command.
 type [{PROPER}]Options struct {
