--- a/src/dev_tools/makeClass/templates/blank_output.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_output.go.tmpl
@@ -41,6 +41,7 @@ func (opts *[{PROPER}]Options) [{PROPER}]Internal() (err error, handled bool) {
 		return err, true
 	}
 
+	//nolint:staticcheck
 	timer := logger.NewTimer()
 	msg := "chifra [{ROUTE}]"
 	// EXISTING_CODE
