Preparing for auto-code generation of caching code

--- a/src/dev_tools/makeClass/templates/blank_type.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_type.go.tmpl
@@ -42,5 +42,5 @@ func (s *Simple[{CLASS_NAME}]) Model(verbose bool, format string, extraOptions m
 	}
 }
 
-// EXISTING_CODE
+[{CACHE_CODE}]// EXISTING_CODE
 // EXISTING_CODE
