Adds date field to every data model that has a timestamp field

--- a/src/dev_tools/makeClass/templates/blank_type.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_type.go.tmpl
@@ -41,6 +41,6 @@ func (s *Simple[{CLASS_NAME}]) Model(verbose bool, format string, extraOptions m
 		Order: order,
 	}
 }
-[{CACHE_CODE}]
+[{DATE_CODE}][{CACHE_CODE}]
 // EXISTING_CODE
 // EXISTING_CODE
