--- a/src/dev_tools/makeClass/templates/blank_type_int.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_type_int.go.tmpl
@@ -33,5 +33,5 @@ func (s *simple[{CLASS_NAME}]) Model(verbose bool, format string, extraOptions m
 	}
 }
 
-// EXISTING_CODE
+[{DATE_CODE}]// EXISTING_CODE
 // EXISTING_CODE
