--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -55,7 +55,7 @@ func [{LOWER}]FinishParseApi(w http.ResponseWriter, r *http.Request) *[{PROPER}]
 		}
 	}
 	opts.Conn = opts.Globals.FinishParseApi(w, r, opts.getCaches())
-
+[{ENS_CONVERT1}]
 	// EXISTING_CODE
 	// EXISTING_CODE
 
@@ -64,10 +64,23 @@ func [{LOWER}]FinishParseApi(w http.ResponseWriter, r *http.Request) *[{PROPER}]
 
 // [{LOWER}]FinishParse finishes the parsing for command line invocations. Returns a new [{PROPER}]Options.
 func [{LOWER}]FinishParse(args []string) *[{PROPER}]Options {
+	// // remove duplicates from args if any (not needed in api mode because the server does it).
+	// if len(args) == 0 {
+	// 	tmp := []string{}
+	// 	dedup := map[string]bool{}
+	// 	for _, arg := range args {
+	// 		if _, value := dedup[arg]; !value {
+	// 			dedup[arg] = true
+	// 			tmp = append(tmp, arg)
+	// 		}
+	// 	}
+	// 	args = tmp
+	// }
+
 	defFmt := "txt"
 	opts := GetOptions()
 	opts.Conn = opts.Globals.FinishParse(args, opts.getCaches())
-
+[{ENS_CONVERT1}]
 	// EXISTING_CODE
 	// EXISTING_CODE
 [{CONFIG_OVERRIDE}]	if len(opts.Globals.Format) == 0 || opts.Globals.Format == "none" {
