Improving auto-code generation

--- a/src/dev_tools/makeClass/templates/python.tmpl
+++ b/src/dev_tools/makeClass/templates/python.tmpl
@@ -7,7 +7,7 @@ from . import session
 [{ROUTE}]Pos = "[{FIRST}]"
 [{ROUTE}]Fmt = "json"
 [{ROUTE}]Opts = {
-[{OPTIONS}]    "fmt": {"hotkey": "-x", "type": "flag"},
+[{OPTIONS}][{GLOBALS}]    "fmt": {"hotkey": "-x", "type": "flag"},
     "verbose:": {"hotkey": "-v", "type": "switch"},
     "help": {"hotkey": "-h", "type": "switch"},
 }
