--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -42,7 +42,7 @@ func (opts *[{PROPER}]Options) String() string {
 	return string(b)
 }
 
-[{GETENVSTR}][{TOCMDLINE}]// [{LOWER}]FinishParseApi finishes the parsing for server invocations. Returns a new [{PROPER}]Options.
+// [{LOWER}]FinishParseApi finishes the parsing for server invocations. Returns a new [{PROPER}]Options.
 func [{LOWER}]FinishParseApi(w http.ResponseWriter, r *http.Request) *[{PROPER}]Options {
 	copy := default[{PROPER}]Options
 	opts := &copy
