--- a/src/dev_tools/makeClass/templates/blank_type_int.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_type_int.go.tmpl
@@ -20,7 +20,7 @@ func (s *simple[{CLASS_NAME}]) Raw() *types.RawModeler {
 	return nil
 }
 
-func (s *simple[{CLASS_NAME}]) Model(verbose bool, format string, extraOptions map[string]any) types.Model {
+func (s *simple[{CLASS_NAME}]) Model(chain, format string, verbose bool, extraOptions map[string]any) types.Model {
 	var model = map[string]interface{}{}
 	var order = []string{}
 
