--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -96,11 +96,12 @@ func GetOptions() *[{PROPER}]Options {
 	return &default[{PROPER}]Options
 }
 
-func ResetOptions() {
+func ResetOptions(testMode bool) {
 	// We want to keep writer between command file calls
 	w := GetOptions().Globals.Writer
 	default[{PROPER}]Options = [{PROPER}]Options{}
 	globals.SetDefaults(&default[{PROPER}]Options.Globals)
+	default[{PROPER}]Options.Globals.TestMode = testMode
 	default[{PROPER}]Options.Globals.Writer = w
 	capabilities := caps.Default // Additional global caps for chifra [{ROUTE}]
 	// EXISTING_CODE
