--- a/src/dev_tools/makeClass/templates/blank_output.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_output.go.tmpl
@@ -12,33 +12,32 @@ package [{API_ROUTE}]Pkg
 // EXISTING_CODE
 
 // Run[{PROPER}] handles the [{ROUTE}] command for the command line. Returns error only as per cobra.
-func Run[{PROPER}](cmd *cobra.Command, args []string) (err error) {
+func Run[{PROPER}](cmd *cobra.Command, args []string) error {
 	opts := [{LOWER}]FinishParse(args)
-	outputHelpers.SetEnabledForCmds("[{ROUTE}]", opts.IsPorted())
+	outputHelpers.EnableCommand("[{ROUTE}]", true)
+	// EXISTING_CODE
+	// EXISTING_CODE
 	outputHelpers.SetWriterForCommand("[{ROUTE}]", &opts.Globals)
-	// EXISTING_CODE
-	// EXISTING_CODE
-	err, _ = opts.[{PROPER}]Internal()
-	return
+	return opts.[{PROPER}]Internal()
 }
 
-// Serve[{PROPER}] handles the [{ROUTE}] command for the API. Returns error and a bool if handled
-func Serve[{PROPER}](w http.ResponseWriter, r *http.Request) (err error, handled bool) {
+// Serve[{PROPER}] handles the [{ROUTE}] command for the API. Returns an error.
+func Serve[{PROPER}](w http.ResponseWriter, r *http.Request) error {
 	opts := [{LOWER}]FinishParseApi(w, r)
-	outputHelpers.SetEnabledForCmds("[{ROUTE}]", opts.IsPorted())
+	outputHelpers.EnableCommand("[{ROUTE}]", true)
+	// EXISTING_CODE
+	// EXISTING_CODE
 	outputHelpers.InitJsonWriterApi("[{ROUTE}]", w, &opts.Globals)
-	// EXISTING_CODE
-	// EXISTING_CODE
-	err, handled = opts.[{PROPER}]Internal()
+	err := opts.[{PROPER}]Internal()
 	outputHelpers.CloseJsonWriterIfNeededApi("[{ROUTE}]", err, &opts.Globals)
-	return
+	return err
 }
 
-// [{PROPER}]Internal handles the internal workings of the [{ROUTE}] command.  Returns error and a bool if handled
-func (opts *[{PROPER}]Options) [{PROPER}]Internal() (err error, handled bool) {
-	err = opts.validate[{PROPER}]()
-	if err != nil {
-		return err, true
+// [{PROPER}]Internal handles the internal workings of the [{ROUTE}] command.  Returns an error.
+func (opts *[{PROPER}]Options) [{PROPER}]Internal() error {
+	var err error
+	if err = opts.validate[{PROPER}](); err != nil {
+		return err
 	}
 
 	timer := logger.NewTimer()
@@ -47,7 +46,7 @@ func (opts *[{PROPER}]Options) [{PROPER}]Internal() (err error, handled bool) {
 	// EXISTING_CODE
 	timer.Report(msg)
 
-	return
+	return err
 }
 
 // Get[{PROPER}]Options returns the options for this tool so other tools may use it.
@@ -57,12 +56,6 @@ func Get[{PROPER}]Options(args []string, g *globals.GlobalOptions) *[{PROPER}]Op
 		ret.Globals = *g
 	}
 	return ret
-}
-
-func (opts *[{PROPER}]Options) IsPorted() (ported bool) {
-	// EXISTING_CODE
-	// EXISTING_CODE
-	return
 }
 
 // EXISTING_CODE
