Adds page option to chifra slurp

--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -11,7 +11,7 @@ import (
 	"encoding/json"
 	"fmt"
 	"net/http"
-	"strings"
+[{OS}]	"strings"
 
 	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/internal/globals"
 [{BASEPKG}]	"github.com/TrueBlocks/trueblocks-core/src/apps/chifra/pkg/caps"
