--- a/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
@@ -18,3 +18,6 @@ import (
 func [{PROPER}](w io.Writer, options map[string]string) error {
 	return [{PKG}].[{PROPER}](w, options)
 }
+
+// EXISTING_CODE
+// EXISTING_CODE
