Starting to add sdk to top folder

--- a/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
@@ -9,13 +9,12 @@
 package sdk
 
 import (
-	"io"
-
-	[{PKG}] "github.com/TrueBlocks/trueblocks-core/src/apps/chifra/sdk"
+	// EXISTING_CODE
+	// EXISTING_CODE
 )
 
 // [{PROPER}] does chifra [{LOWER}]
-func [{PROPER}](w io.Writer, options map[string]string) error {
+func [{PROPER}]Cmd(w io.Writer, options map[string]string) error {
 	return [{PKG}].[{PROPER}](w, options)
 }
 
