Cleaning up auto-code gen a bit

--- a/src/dev_tools/makeClass/templates/blank_sdk.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk.go.tmpl
@@ -17,12 +17,7 @@ import (
 )
 
 // [{PROPER}] provides an interface to the command line chifra [{LOWER}] through the SDK.
-func [{PROPER}](w io.Writer, options map[string]string) error {
-	values := make(url.Values)
-	for key, val := range options {
-		values.Set(key, val)
-	}
-
+func [{PROPER}](w io.Writer, values url.Values) error {
 	[{PKG}].ResetOptions(false)
 	opts := [{PKG}].[{PROPER}]FinishParseInternal(w, values)
 	outputHelpers.EnableCommand("[{LOWER}]", true)
@@ -34,3 +29,6 @@ func [{PROPER}](w io.Writer, options map[string]string) error {
 
 	return err
 }
+
+// EXISTING_CODE
+// EXISTING_CODE
