Implements auto-code gen for fields and enums of each command

--- a/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
@@ -14,7 +14,7 @@ import (
 )
 
 type [{PROPER}]Options struct {
-[{FIEDLS}]	// EXISTING_CODE
+[{FIELDS}]	// EXISTING_CODE
 	// EXISTING_CODE
 }
 
@@ -28,5 +28,5 @@ func (opts *[{PROPER}]Options) [{PROPER}](w io.Writer) error {
 	return [{PKG}].[{PROPER}](w, values)
 }
 
-// EXISTING_CODE
+[{ENUMS}]// EXISTING_CODE
 // EXISTING_CODE
