--- a/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
@@ -22,7 +22,7 @@ type [{PROPER}]Options struct {
 func (opts *[{PROPER}]Options) [{PROPER}](w io.Writer) error {
 	values := make(url.Values)
 
-	// EXISTING_CODE
+[{CODE}]	// EXISTING_CODE
 	// EXISTING_CODE
 	opts.Globals.mapGlobals(values)
 
