Starts to implement capabilities for auto-gen

--- a/src/dev_tools/makeClass/templates/blank.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank.go.tmpl
@@ -35,7 +35,7 @@ const notes[{PROPER}] = `[{POSTNOTES}]`
 
 [{OPT_DEF}]func init() {
 	var capabilities = caps.Default // Additional global caps for chifra [{ROUTE}]
-	// EXISTING_CODE
+[{CAPABILITIES}]	// EXISTING_CODE
 	// EXISTING_CODE
 
 	[{ROUTE}]Cmd.Flags().SortFlags = false
