--- a/src/dev_tools/makeClass/templates/blank_options.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_options.go.tmpl
@@ -114,7 +114,7 @@ func ResetOptions(testMode bool) {
 	default[{PROPER}]Options.Globals.TestMode = testMode
 	default[{PROPER}]Options.Globals.Writer = w
 	capabilities := caps.Default // Additional global caps for chifra [{ROUTE}]
-	// EXISTING_CODE
+[{CAPABILITIES}]	// EXISTING_CODE
 	// EXISTING_CODE
 	default[{PROPER}]Options.Globals.Caps = capabilities
 }
