--- a/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
@@ -32,13 +32,12 @@ func (opts *[{PROPER}]Options) [{PROPER}](w io.Writer) error {
 // Get[{PROPER}]Options returns an options instance given a string array of arguments.
 func Get[{PROPER}]Options(args []string) (*[{PROPER}]Options, error) {
 	var opts [{PROPER}]Options
-
-	for _, arg := range args {
+	err := ParseOptions[[{PROPER}]Options](args, &opts)
+	{
 		// EXISTING_CODE
 		// EXISTING_CODE
 	}
-
-	return &opts, nil
+	return &opts, err
 }
 
 [{ENUMS}]// EXISTING_CODE
