--- a/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
@@ -33,7 +33,7 @@ func (opts *[{PROPER}]Options) [{PROPER}](w io.Writer) error {
 func Get[{PROPER}]Options(args []string) (*[{PROPER}]Options, error) {
 	var opts [{PROPER}]Options
 
-	for _, arg := range args {
+	for i, arg := range args {
 		// EXISTING_CODE
 		// EXISTING_CODE
 	}
