--- a/src/dev_tools/makeClass/templates/blank_sdk.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk.go.tmpl
@@ -19,8 +19,7 @@ import (
 
 // [{PROPER}] provides an interface to the command line chifra [{LOWER}] through the SDK.
 func [{PROPER}](w io.Writer, values url.Values) error {
-	testMode := os.Getenv("TEST_MODE") == "true"
-	[{PKG}].ResetOptions(testMode)
+	[{PKG}].ResetOptions(sdkTestMode)
 	opts := [{PKG}].[{PROPER}]FinishParseInternal(w, values)
 	outputHelpers.EnableCommand("[{LOWER}]", true)
 	// EXISTING_CODE
