--- a/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
@@ -18,6 +18,12 @@ type [{PROPER}]Options struct {
 	// EXISTING_CODE
 }
 
+// String implements the stringer interface
+func (opts *[{PROPER}]Options) String() string {
+	bytes, _ := json.Marshal(opts)
+	return string(bytes)
+}
+
 // [{PROPER}] implements the chifra [{LOWER}] command for the SDK.
 func (opts *[{PROPER}]Options) [{PROPER}](w io.Writer) error {
 	values := make(url.Values)
@@ -29,16 +35,13 @@ func (opts *[{PROPER}]Options) [{PROPER}](w io.Writer) error {
 	return [{PKG}].[{PROPER}](w, values)
 }
 
-// Get[{PROPER}]Options returns an options instance given a string array of arguments.
+// Get[{PROPER}]Options returns a filled-in options instance given a string array of arguments.
 func Get[{PROPER}]Options(args []string) (*[{PROPER}]Options, error) {
 	var opts [{PROPER}]Options
-	err := assignValuesFromArgs(&opts, &opts.Globals, args)
-	logger.Info("Args:", args)
-	logger.Info("Opts:", opts.String())
-	if err != nil {
+	if err := assignValuesFromArgs(&opts, &opts.Globals, args); err != nil {
 		return nil, err
 	}
-	return &opts, err
+	return &opts, nil
 }
 
 [{ENUMS}]// EXISTING_CODE
