--- a/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
@@ -41,6 +41,10 @@ func Get[{PROPER}]Options(args []string) (*[{PROPER}]Options, error) {
 	if err := assignValuesFromArgs(&opts, &opts.Globals, args); err != nil {
 		return nil, err
 	}
+
+	// EXISTING_CODE
+	// EXISTING_CODE
+
 	return &opts, nil
 }
 
