--- a/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
@@ -35,10 +35,18 @@ func (opts *[{PROPER}]Options) [{PROPER}](w io.Writer) error {
 	return [{PKG}].[{PROPER}](w, values)
 }
 
+// [{LOWER}]ParseFunc handles specail cases such as structs and enums (if any).
+func [{LOWER}]ParseFunc(target interface{}, key, value string) (bool, error) {
+	var found bool
+	// EXISTING_CODE
+	// EXISTING_CODE
+	return found, nil
+}
+
 // Get[{PROPER}]Options returns a filled-in options instance given a string array of arguments.
 func Get[{PROPER}]Options(args []string) (*[{PROPER}]Options, error) {
 	var opts [{PROPER}]Options
-	if err := assignValuesFromArgs(args, nil, &opts, &opts.Globals); err != nil {
+	if err := assignValuesFromArgs(args, [{LOWER}]ParseFunc, &opts, &opts.Globals); err != nil {
 		return nil, err
 	}
 
