--- a/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
@@ -38,8 +38,15 @@ func (opts *[{PROPER}]Options) [{PROPER}](w io.Writer) error {
 // [{LOWER}]ParseFunc handles specail cases such as structs and enums (if any).
 func [{LOWER}]ParseFunc(target interface{}, key, value string) (bool, error) {
 	var found bool
+	opts, ok := target.(*[{PROPER}]Options)
+	if !ok {
+		return false, fmt.Errorf("parseFunc([{LOWER}]): target is not of correct type")
+	}
+
+[{ENUMTHING}]
 	// EXISTING_CODE
 	// EXISTING_CODE
+
 	return found, nil
 }
 
