--- a/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
@@ -26,11 +26,13 @@ func (opts *[{PROPER}]Options) String() string {
 
 // [{PROPER}] implements the chifra [{LOWER}] command for the SDK.
 func (opts *[{PROPER}]Options) [{PROPER}](w io.Writer) error {
-	values := make(url.Values)
+	values, err := structToValues(*opts)
+	if err != nil {
+		log.Fatalf("Error converting [{LOWER}] struct to URL values: %v", err)
+	}
 
-[{CODE}]	// EXISTING_CODE
 	// EXISTING_CODE
-	opts.Globals.mapGlobals(values)
+	// EXISTING_CODE
 
 	return [{PKG}].[{PROPER}](w, values)
 }
