Enable testing in the inner sdk code

--- a/src/dev_tools/makeClass/templates/blank_sdk.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk.go.tmpl
@@ -18,7 +18,7 @@ import (
 
 // [{PROPER}] provides an interface to the command line chifra [{LOWER}] through the SDK.
 func [{PROPER}](w io.Writer, values url.Values) error {
-	[{PKG}].ResetOptions(false)
+	[{PKG}].ResetOptions(sdkTestMode)
 	opts := [{PKG}].[{PROPER}]FinishParseInternal(w, values)
 	outputHelpers.EnableCommand("[{LOWER}]", true)
 	// EXISTING_CODE
