--- a/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank_sdk2.go.tmpl
@@ -14,20 +14,47 @@ import (
 )
 
 type [{PROPER}]Options struct {
-[{FIELDS}]	// EXISTING_CODE
-	// EXISTING_CODE
+[{FIELDS}]}
+
+// String implements the stringer interface
+func (opts *[{PROPER}]Options) String() string {
+	bytes, _ := json.Marshal(opts)
+	return string(bytes)
 }
 
 // [{PROPER}] implements the chifra [{LOWER}] command for the SDK.
 func (opts *[{PROPER}]Options) [{PROPER}](w io.Writer) error {
-	values := make(url.Values)
-
-[{CODE}]	// EXISTING_CODE
-	// EXISTING_CODE
-	opts.Globals.mapGlobals(values)
+	values, err := structToValues(*opts)
+	if err != nil {
+		log.Fatalf("Error converting [{LOWER}] struct to URL values: %v", err)
+	}
 
 	return [{PKG}].[{PROPER}](w, values)
 }
 
-[{ENUMS}]// EXISTING_CODE
-// EXISTING_CODE
+// [{LOWER}]ParseFunc handles specail cases such as structs and enums (if any).
+func [{LOWER}]ParseFunc(target interface{}, key, value string) (bool, error) {
+	var found bool
+	opts, ok := target.(*[{PROPER}]Options)
+	if !ok {
+		return false, fmt.Errorf("parseFunc([{LOWER}]): target is not of correct type")
+	}
+
+[{ENUMS2}]
+	// EXISTING_CODE
+	// EXISTING_CODE
+
+	return found, nil
+}
+
+// Get[{PROPER}]Options returns a filled-in options instance given a string array of arguments.
+func Get[{PROPER}]Options(args []string) (*[{PROPER}]Options, error) {
+	var opts [{PROPER}]Options
+	if err := assignValuesFromArgs(args, [{LOWER}]ParseFunc, &opts, &opts.Globals); err != nil {
+		return nil, err
+	}
+
+	return &opts, nil
+}
+
+[{ENUMS1}]
