Removes unused code

--- a/src/dev_tools/makeClass/templates/blank.go.tmpl
+++ b/src/dev_tools/makeClass/templates/blank.go.tmpl
@@ -34,8 +34,7 @@ const long[{PROPER}] = `[{LONG}]`
 const notes[{PROPER}] = `[{POSTNOTES}]`
 
 [{OPT_DEF}]func init() {
-	[{CAPABILITIES}]	// EXISTING_CODE
-	// EXISTING_CODE
+	[{CAPABILITIES}]
 
 	[{ROUTE}]Cmd.Flags().SortFlags = false
 
